<resources>
    <string name="app_name">Sync Audiobook Player</string>

    <string name="parse_app_id">vlT3h1c4hLBPBvdyayxNWdxpz71RVjkMnS8mFmIo</string>
    <string name="parse_client_key">D2qWkrjNjZDoKbdqoW5mESmK9Ytj3uz0A10HHEPr</string>

    <string name="banner_ad_unit_id">ca-app-pub-1596564106739503/5224242589</string>

    <string name="text_login">Sync Audiobook Player</string>
    <string name="text_register_prompt">New to Sync Audiobook Player?</string>
    <string name="text_register">Register Sync Audiobook Player Account</string>
    <string name="text_login_failed">Oh Noes! Email or Password Incorrect</string>
    <string name="text_empty_list">you\'ve not yet imported any books</string>

    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_question">question</string>
    <string name="hint_answer">answer</string>
    <string name="hint_book_name">title</string>
    <string name="hint_author">author</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>
    <string name="btn_up">Up</string>

    <string name="nav_all_books">All Books</string>
    <string name="nav_authors">Authors</string>
    <string name="nav_playing_now">Playing Now</string>
    <string name="nav_import">Import New Book</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">AuthActivity</string>

    <string name="title_progress_dialog">Importing Book</string>
    <string name="title_import_book_dialog">Import Book</string>
    <string name="title_pause_dialog">Set Pause</string>
    <string name="title_edit_title">Edit Title</string>
    <string name="title_edit_author">Edit Author</string>

    <string name="label_nudge">Nudge to Resume</string>
    <string name="label_pause_eof">Pause After Current File</string>
    <string name="label_pause_timer">Pause After</string>
    <string name="label_pause_minutes">Minutes</string>
    <string name="label_pause_in">Pause In</string>
    <string name="label_pause_none">No Pause</string>

    <string name="menu_details">View Details</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_pause_eof">Pause at End of File</string>
    <string name="menu_pause_timer">Set Pause Timer</string>

    <string name="toast_no_book">No Book Currently Loaded</string>
    <string name="toast_file_error">error loading file: </string>
    <string name="toast_import_error">Error Importing Book - Some Files Missing</string>

</resources>
