<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nudge"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:id="@+id/chk_nudge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pause_none"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"/>

        <RadioButton
            android:id="@+id/radio_none"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pause_eof"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"/>

        <RadioButton
            android:id="@+id/radio_eof"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_pause_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pause_timer"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/et_pause_timer"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_toRightOf="@id/txt_pause_timer"
            android:layout_margin="10dp"
            android:text="15"
            android:maxLength="3"
            />

        <TextView
            android:id="@+id/txt_pause_mins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pause_minutes"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/et_pause_timer"
            />

        <RadioButton
            android:id="@+id/radio_timer"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"/>

        <!--<NumberPicker-->
            <!--android:id="@+id/num_hours"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/txt_pause_timer"-->
            <!--android:layout_marginLeft="10dp"/>-->

        <!--<NumberPicker-->
            <!--android:id="@+id/num_mins"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/txt_pause_timer"-->
            <!--android:layout_toRightOf="@id/num_hours"-->
            <!--/>-->

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:gravity="center_horizontal">



    </LinearLayout>


</LinearLayout>